CSRF - first attempt

--- a/views/item.ejs
+++ b/views/item.ejs
@@ -20,6 +20,7 @@
   </ul>
 
   <form action="/items/<%= item.id %>/delete" method="POST">
+    <%- include('partials/csrf') %>
     <input type="submit" value="Delete">
   </form>
 </body>
