--- a/views/new.ejs
+++ b/views/new.ejs
@@ -6,6 +6,7 @@
 <body>
   <%- include('partials/nav') %>
   <form action="/new" method="POST" enctype="multipart/form-data">
+    <%- include('partials/csrf') %>
     <div>
       <label>Name <input name="name"></label>
     </div>
